RESOLVED FIXED310137
REGRESSION(290430@main): Timelines recording stops on page reload even when auto-stop is disabled
https://bugs.webkit.org/show_bug.cgi?id=310137
Summary REGRESSION(290430@main): Timelines recording stops on page reload even when a...
Razvan Caliman
Reported 2026-03-17 14:51:00 PDT
Steps to reproduce 1. Visit https://webkit.org 2. Open Web Inspector > Timelines 3. Ensure "Stop recording once page loads" is unchecked 4. Start a timeline recording and refresh the page Result Timeline stops recording
Attachments
Screen recording of issue in Timelines tab (2.00 MB, video/mp4)
2026-03-17 14:51 PDT, Razvan Caliman
no flags
Razvan Caliman
Comment 1 2026-03-17 14:51:40 PDT
Created attachment 478709 [details] Screen recording of issue in Timelines tab
Razvan Caliman
Comment 2 2026-03-17 14:51:59 PDT
Razvan Caliman
Comment 3 2026-03-17 15:01:03 PDT
EWS
Comment 4 2026-03-19 10:56:16 PDT
Committed 309566@main (cd3ed2f6e666): <https://commits.webkit.org/309566@main> Reviewed commits have been landed. Closing PR #60809 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.